syntax = "proto3";
package engine;


service Teslaq {
    rpc CreateNode   (CreateNodeRequest)   returns  (Empty);
    rpc RemoveNode   (RemoveNodeRequest)   returns  (Empty);
    rpc ProduceEvent (ProduceEventRequest) returns  (Empty);
    rpc DemandEvent  (DemandEventRequest)  returns  (DemandEventReply);
}


message CreateNodeRequest {
    string node_name       = 1;
    int32  total_disk_size = 2;
    int32  buffer_capacity = 3;
}
message RemoveNodeRequest {
    string node_name = 1;
}
message ProduceEventRequest {
    string node_name = 1;
    string event   = 2;
}
message DemandEventRequest {
    string node_name = 1; 
    int32  num = 2;
}


// # Reply

message DemandEventReply {
    repeated string events = 1; 
}
 
message Empty {}